--- a/component.yaml
+++ b/component.yaml
@@ -1,6 +1,7 @@
 platform: iOS
 purpose: Publish
 StructureType: CustomUI
+runOn: "Server"
 buildPlatform:
 displayName: "Get App Info from App Store"
 description: "Gets package details from App Store"
