--- a/component.yaml
+++ b/component.yaml
@@ -3,7 +3,7 @@ purpose: Publish
 structureType: CustomUI
 runOn: "Server"
 buildPlatform:
-displayName: "Get App Info from App Store"
+displayName: "App Information from App Store"
 description: "Gets package details from App Store"
 marketPlace: "AppleAppStore"
 processFilename: bash
